<resources>
    <!-- REST API Server URLs -->
    <string name="grpc_host">165.246.21.202</string>
    <string name="grpc_port">50051</string>
    <string name="campaign_id">11</string>
    <string name="app_name">YouNoOne</string>
    <string name="dummy">Dummy</string>
    <string name="status">Status for today:</string>
    <string name="authentication_txt">Authentication</string>
    <string name="authentication_btn">Authenticate</string>
    <string name="ema_explanation"><b>지난 설문 시점으로부터 현재까지</b> 다음의 문제에 해당하는 정도를 1-5까지 나타내주세요.\n
        * 1(전혀 해당하지 않음) ~ 5(매우 해당함)</string>
    <string name="ema_question_1">1. 일 또는 여가 활동을 하는 데 흥미나 즐거움을 느끼지 못함</string>
    <string name="ema_question_2">2. 기분이 가라앉거나, 우울하거나, 희망이 없음</string>
    <string name="ema_question_3">3. 잠을 제대로 자지 못하거나 잠을 너무 많이 잠 </string>
    <string name="ema_question_4">4. 피곤하거나 기운이 거의 없음</string>
    <string name="ema_question_5">5. 입맛이 없거나 과식을 함</string>
    <string name="ema_question_6">6. 자신을 부정적으로 보거나 실패자라고 생각함</string>
    <string name="ema_question_7">7. 일에 집중하는 것이 어려움</string>
    <string name="ema_question_8">8. 너무 느리게 혹은 너무 많이 움직이거나 말을 함</string>
    <string name="ema_question_9">9. 죽고싶다고 생각하거나 어떤 식으로든 자신을 해칠 것이라고 생각함</string>
    <string name="submit">Submit</string>
    <string name="notif_channel_id">YouNoOne_notif_chanel</string>
    <string name="daily_notif_text">Hey there! Please, fill in the questionnaire :)</string>
    <string name="smartphone">smartphone</string>
    <string name="uploading">Uploading…</string>
    <string name="noti_service_running">Service is running…</string>
    <string name="day_num">Duration: %1$d day</string>
    <string name="ema_responses">EMA responses</string>
    <string name="ema_responses_rate">EMA responses: %1$d/4</string>
    <string name="data_loaded">Data loaded:  %1$s</string>
    <string name="last_active">Last active:  %1$s</string>
    <string name="restart_data_collection">Restart service</string>
    <string name="set_locations">Set locations</string>
    <string name="service_runnig">Service: Running :)</string>
    <string name="service_stopped">Service: Not running :(</string>
    <string name="internet_on">Internet: Connected :)</string>
    <string name="internet_off">Internet: Not connected :(</string>
    <string name="log_out">Log out</string>
    <string name="set_home_location">Home</string>
    <string name="set_dorm_location">Dormitory</string>
    <string name="set_university_location">University</string>
    <string name="set_library_location">Library</string>
    <string name="set_additional_location">Other place</string>
    <string name="locations_set_instruction">Place the pin where you want it on the map and press the corresponding place button to set the place.</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="location_removed">Location has been removed!</string>
    <string name="location_remove_confirmation">Are you sure you want to remove this location?</string>
    <string name="location_set"> location has been set!</string>
    <string name="location_set_confirmation">Are you sure it\'s your \"%1$s\" location?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="grant_permissions">Please, grant permissions or turn on locations!</string>
    <string name="permissions">Permissions</string>
    <string name="answer_last_ema">answer last EMA</string>
    <string name="loading_the_map">Loading the map…</string>
    <string name="please_wait">Please, wait!</string>
    <string name="_10_00">10:00</string>
    <string name="_14_00">14:00</string>
    <string name="_18_00">18:00</string>
    <string name="_22_00">22:00</string>
    <string name="setting_locations">Setting locations</string>
    <string name="yessss">YESSSS</string>
    <string name="you_earned">You\'ve earned</string>
    <string name="reward_image">reward image</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="close_image">close image</string>
    <string name="earned_points">%1$d ₩</string>
    <string name="plus_earned_points">+%1$d ₩</string>
    <string name="currently_earned_points">Currently earned points</string>
</resources>